# url2md

./: .gitignore  HOW_TO_TEST.md  LICENSE  QUICK_FIX.md  README.md  TRANSLATION_CONFIG.md  TRANSLATION_FIXES.md  TRANSLATION_IMPLEMENTATION.md  TRANSLATION_PERFORMANCE.md  TRANSLATION_USAGE.md  demo_translation.bat  diagnose_translation.py  pyproject.toml  quick_test.py  quick_test_translation.py  run_test.bat  test_fix.bat  test_translation.py  translation_config.example.json  translation_config.ollama.json
test/: blog_post.md  test.md  test1.md  test2.md  test_bs.py  test_url.py  test_yb.py  yb_blog.md
tests/: test_both.py  test_cascade_fix.py  test_convert.py  test_datacamp.py  test_datacamp_sidebar.py  test_final.py  test_final_complete.py  test_fix.py  test_import.py  test_log_output.py  test_tigerdata.py  test_tigerdata_complete.py  test_tigerdata_final.py
url2md/: __init__.py  cli.py  converter.py  translator.py
