[project]
name = "url2md"
version = "0.1.0"
description = "Convert web pages to Markdown format"
requires-python = ">=3.9"
dependencies = [
    "crawl4ai>=0.2.0",
    "beautifulsoup4>=4.12.0",
    "html2text>=2024.2.26",
    "lxml>=5.1.0",
]

[project.scripts]
url2md = "url2md.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
